--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1086,6 +1086,9 @@
     - 52893
     - 52921
     - 53235
+    - 53890
+    - 53880
+    - 53878
   threshold: 95.4%
   metadata: &112
     title_ru: Ван-Пис
@@ -1369,6 +1372,7 @@
     - 49290
     - 49848
     - 50029
+    - 53932
   threshold: 90.2%
   metadata: &144
     title_ru: Девочка-волшебница Мадока★Волшебство
@@ -2941,6 +2945,9 @@
     - 42476
     - 47413
     - 51782
+    - 49611
+    - 53976
+    - 53517
   threshold: 93.3%
   metadata: &305
     title_ru: Детектив Конан
@@ -3103,6 +3110,7 @@
     - 29716
     - 30481
     - 30483
+    - 53941
   threshold: 90%
   metadata: &322
     title_ru: Галактический экспресс 999
@@ -3819,6 +3827,7 @@
     - 40554
     - 49311
     - 53604
+    - 53625
   threshold: 93.1%
   metadata: &396
     title_ru: Космический линкор Ямато
@@ -4191,6 +4200,8 @@
   algo: duration
   filters: &431
     franchise: uchuu_kyoudai
+    not_anime_ids:
+    - 53938
   threshold: 100%
   metadata: &432
     title_ru: Космические братья
@@ -4890,6 +4901,7 @@
     - 28103
     - 37668
     - 39414
+    - 53968
   threshold: 95.6%
   metadata: &506
     title_ru: Щелкунчик Китаро
