--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -2650,7 +2650,6 @@
     - 27907
     - 30840
     - 32158
-    - 32898
     - 33221
     - 33225
     - 33226
@@ -4031,6 +4030,8 @@
     - 52948
     - 53071
     - 53242
+    ignore_latest_ids:
+    - 54118
 - neko_id: idolish7
   level: 0
   algo: duration
