move deleted ids to generator.not_ignored_ids

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3164,8 +3164,8 @@
     not_anime_ids:
     - 16335
     - 53216
-    - 54749
     - 54748
+    - 54749
   threshold: 100%
   metadata: &328
     title_ru: 'Мув-Лув: Альтернатива'
@@ -4046,6 +4046,7 @@
     - 54045
     - 54046
     - 54047
+    - 55006
   threshold: 98%
   metadata: &421
     title_ru: Семёрка идолов
@@ -4961,27 +4962,32 @@
     not_anime_ids:
     - 28921
     - 31238
-  threshold: 97.9%
+  threshold: 95.2%
   metadata: &514
     title_ru: Стич
     title_en: Stitch
     image: "/assets/achievements/anime/franchise/stitch.jpg"
     topic_id: 247360
+  generator: &515
+    not_ignored_ids:
+    - 25889
+    - 25891
 - neko_id: stitch
   level: 0
   algo: duration
   filters: *513
   threshold: 0.01
   metadata: *514
+  generator: *515
 - neko_id: tsukipro_the_animation
   level: 1
   algo: duration
-  filters: &515
+  filters: &516
     franchise: tsukipro_the_animation
     not_anime_ids:
     - 43288
   threshold: 100%
-  metadata: &516
+  metadata: &517
     title_ru: Лунная песнь
     title_en: Tsukiuta
     image: "/assets/achievements/anime/franchise/tsukipro_the_animation.jpg"
@@ -4989,13 +4995,13 @@
 - neko_id: tsukipro_the_animation
   level: 0
   algo: duration
-  filters: *515
+  filters: *516
   threshold: 0.01
-  metadata: *516
+  metadata: *517
 - neko_id: atom
   level: 1
   algo: duration
-  filters: &517
+  filters: &518
     franchise: atom
     not_anime_ids:
     - 2747
@@ -5016,7 +5022,7 @@
     - 40377
     - 54081
   threshold: 99.2%
-  metadata: &518
+  metadata: &519
     title_ru: Могучий Атом
     title_en: Tetsuwan Atom
     image: "/assets/achievements/anime/franchise/atom.jpg"
@@ -5024,13 +5030,13 @@
 - neko_id: atom
   level: 0
   algo: duration
-  filters: *517
+  filters: *518
   threshold: 0.01
-  metadata: *518
+  metadata: *519
 - neko_id: gegege_no_kitarou
   level: 1
   algo: duration
-  filters: &519
+  filters: &520
     franchise: gegege_no_kitarou
     not_anime_ids:
     - 2165
@@ -5049,28 +5055,28 @@
     - 53968
     - 55041
   threshold: 95.6%
-  metadata: &520
+  metadata: &521
     title_ru: Щелкунчик Китаро
     title_en: Gegege no Kitarou
     image: "/assets/achievements/anime/franchise/gegege_no_kitarou.jpg"
     topic_id: 247360
-  generator: &521
+  generator: &522
     ignore_latest_ids:
     - 48426
 - neko_id: gegege_no_kitarou
   level: 0
   algo: duration
-  filters: *519
+  filters: *520
   threshold: 0.01
-  metadata: *520
-  generator: *521
+  metadata: *521
+  generator: *522
 - neko_id: xingchen_bian
   level: 1
   algo: duration
-  filters: &522
+  filters: &523
     franchise: xingchen_bian
   threshold: 98%
-  metadata: &523
+  metadata: &524
     title_ru: Дорогой звёзд
     title_en: Xingchen Bian
     image: "/assets/achievements/anime/franchise/xingchen_bian.jpg"
@@ -5078,18 +5084,18 @@
 - neko_id: xingchen_bian
   level: 0
   algo: duration
-  filters: *522
+  filters: *523
   threshold: 0.01
-  metadata: *523
+  metadata: *524
 - neko_id: tamayura
   level: 1
   algo: duration
-  filters: &524
+  filters: &525
     franchise: tamayura
     not_anime_ids:
     - 25169
   threshold: 94.7%
-  metadata: &525
+  metadata: &526
     title_ru: Тамаюра
     title_en: Tamayura
     image: "/assets/achievements/anime/franchise/tamayura.jpg"
@@ -5097,13 +5103,13 @@
 - neko_id: tamayura
   level: 0
   algo: duration
-  filters: *524
+  filters: *525
   threshold: 0.01
-  metadata: *525
+  metadata: *526
 - neko_id: pripara
   level: 1
   algo: duration
-  filters: &526
+  filters: &527
     franchise: pripara
     not_anime_ids:
     - 21707
@@ -5116,7 +5122,7 @@
     - 38648
     - 40543
   threshold: 90.4%
-  metadata: &527
+  metadata: &528
     title_ru: При Пара
     title_en: PriPara
     image: "/assets/achievements/anime/franchise/pripara.jpg"
@@ -5124,18 +5130,18 @@
 - neko_id: pripara
   level: 0
   algo: duration
-  filters: *526
+  filters: *527
   threshold: 0.01
-  metadata: *527
+  metadata: *528
 - neko_id: danball_senki
   level: 1
   algo: duration
-  filters: &528
+  filters: &529
     franchise: danball_senki
     not_anime_ids:
     - 15785
   threshold: 99.7%
-  metadata: &529
+  metadata: &530
     title_ru: Хроники карточных битв
     title_en: Danball Senki
     image: "/assets/achievements/anime/franchise/danball_senki.jpg"
@@ -5143,16 +5149,16 @@
 - neko_id: danball_senki
   level: 0
   algo: duration
-  filters: *528
+  filters: *529
   threshold: 0.01
-  metadata: *529
+  metadata: *530
 - neko_id: ze_tian_ji
   level: 1
   algo: duration
-  filters: &530
+  filters: &531
     franchise: ze_tian_ji
   threshold: 100%
-  metadata: &531
+  metadata: &532
     title_ru: Путь выбора
     title_en: Ze Tian Ji
     image: "/assets/achievements/anime/franchise/ze_tian_ji.jpg"
@@ -5160,20 +5166,20 @@
 - neko_id: ze_tian_ji
   level: 0
   algo: duration
-  filters: *530
+  filters: *531
   threshold: 0.01
-  metadata: *531
+  metadata: *532
 - neko_id: hidamari_sketch
   level: 1
   algo: duration
-  filters: &532
+  filters: &533
     franchise: hidamari_sketch
     not_anime_ids:
     - 28911
     - 28913
     - 28915
   threshold: 95%
-  metadata: &533
+  metadata: &534
     title_ru: Наброски Хидамари
     title_en: Hidamari Sketch
     image: "/assets/achievements/anime/franchise/hidamari_sketch.jpg"
@@ -5181,19 +5187,19 @@
 - neko_id: hidamari_sketch
   level: 0
   algo: duration
-  filters: *532
+  filters: *533
   threshold: 0.01
-  metadata: *533
+  metadata: *534
 - neko_id: kimagure_orange_road
   level: 1
   algo: duration
-  filters: &534
+  filters: &535
     franchise: kimagure_orange_road
     not_anime_ids:
     - 14059
     - 41041
   threshold: 100%
-  metadata: &535
+  metadata: &536
     title_ru: Капризы Апельсиновой улицы
     title_en: Kimagure Orange☆Road
     image: "/assets/achievements/anime/franchise/kimagure_orange_road.jpg"
@@ -5201,39 +5207,39 @@
 - neko_id: kimagure_orange_road
   level: 0
   algo: duration
-  filters: *534
+  filters: *535
   threshold: 0.01
-  metadata: *535
+  metadata: *536
 - neko_id: wan_jie_xian_zong
   level: 1
   algo: duration
-  filters: &536
+  filters: &537
     franchise: wan_jie_xian_zong
   threshold: 99%
-  metadata: &537
+  metadata: &538
     title_ru: Страна десяти тысяч чудес
     title_en: Wan Jie Xian Zong
     image: "/assets/achievements/anime/franchise/wan_jie_xian_zong.jpg"
     topic_id: 247360
-  generator: &538
+  generator: &539
     threshold: 99%
 - neko_id: wan_jie_xian_zong
   level: 0
   algo: duration
-  filters: *536
+  filters: *537
   threshold: 0.01
-  metadata: *537
-  generator: *538
+  metadata: *538
+  generator: *539
 - neko_id: harukanaru_toki_no_naka_de
   level: 1
   algo: duration
-  filters: &539
+  filters: &540
     franchise: harukanaru_toki_no_naka_de
     not_anime_ids:
     - 4190
     - 30145
   threshold: 95%
-  metadata: &540
+  metadata: &541
     title_ru: В далёкие времена
     title_en: Harukanaru Toki no Naka de
     image: "/assets/achievements/anime/franchise/harukanaru_toki_no_naka_de.jpg"
@@ -5241,18 +5247,18 @@
 - neko_id: harukanaru_toki_no_naka_de
   level: 0
   algo: duration
-  filters: *539
+  filters: *540
   threshold: 0.01
-  metadata: *540
+  metadata: *541
 - neko_id: sakura_taisen
   level: 1
   algo: duration
-  filters: &541
+  filters: &542
     franchise: sakura_taisen
     not_anime_ids:
     - 15127
   threshold: 95%
-  metadata: &542
+  metadata: &543
     title_ru: 'Сакура: Война миров'
     title_en: Sakura Taisen
     image: "/assets/achievements/anime/franchise/sakura_taisen.jpg"
@@ -5260,16 +5266,16 @@
 - neko_id: sakura_taisen
   level: 0
   algo: duration
-  filters: *541
+  filters: *542
   threshold: 0.01
-  metadata: *542
+  metadata: *543
 - neko_id: cutey_honey
   level: 1
   algo: duration
-  filters: &543
+  filters: &544
     franchise: cutey_honey
   threshold: 95%
-  metadata: &544
+  metadata: &545
     title_ru: Милашка Хани
     title_en: Cutey Honey
     image: "/assets/achievements/anime/franchise/cutey_honey.jpg"
@@ -5277,20 +5283,20 @@
 - neko_id: cutey_honey
   level: 0
   algo: duration
-  filters: *543
+  filters: *544
   threshold: 0.01
-  metadata: *544
+  metadata: *545
 - neko_id: koihime_musou
   level: 1
   algo: duration
-  filters: &545
+  filters: &546
     franchise: koihime_musou
     not_anime_ids:
     - 15015
     - 15093
     - 15095
   threshold: 95%
-  metadata: &546
+  metadata: &547
     title_ru: Несравненная принцесса любви
     title_en: Koihime†Musou
     image: "/assets/achievements/anime/franchise/koihime_musou.jpg"
@@ -5298,16 +5304,16 @@
 - neko_id: koihime_musou
   level: 0
   algo: duration
-  filters: *545
+  filters: *546
   threshold: 0.01
-  metadata: *546
+  metadata: *547
 - neko_id: kindaichi_shounen_no_jikenbo
   level: 1
   algo: duration
-  filters: &547
+  filters: &548
     franchise: kindaichi_shounen_no_jikenbo
   threshold: 93.4%
-  metadata: &548
+  metadata: &549
     title_ru: Дело ведет юный детектив Киндаити
     title_en: Kindaichi Shounen no Jikenbo
     image: "/assets/achievements/anime/franchise/kindaichi_shounen_no_jikenbo.jpg"
@@ -5315,33 +5321,33 @@
 - neko_id: kindaichi_shounen_no_jikenbo
   level: 0
   algo: duration
-  filters: *547
+  filters: *548
   threshold: 0.01
-  metadata: *548
+  metadata: *549
 - neko_id: wu_geng_ji
   level: 1
   algo: duration
-  filters: &549
+  filters: &550
     franchise: wu_geng_ji
   threshold: 98%
-  metadata: &550
+  metadata: &551
     title_ru: Легенды и герои
     title_en: Wu Geng Ji
     image: "/assets/achievements/anime/franchise/wu_geng_ji.jpg"
     topic_id: 247360
-  generator: &551
+  generator: &552
     threshold: 98%
 - neko_id: wu_geng_ji
   level: 0
   algo: duration
-  filters: *549
+  filters: *550
   threshold: 0.01
-  metadata: *550
-  generator: *551
+  metadata: *551
+  generator: *552
 - neko_id: votoms_finder
   level: 1
   algo: duration
-  filters: &552
+  filters: &553
     franchise: votoms_finder
     not_anime_ids:
     - 7536
@@ -5350,7 +5356,7 @@
     - 12441
     - 49936
   threshold: 95%
-  metadata: &553
+  metadata: &554
     title_ru: Бронированные воины Вотомы
     title_en: Soukou Kihei Votoms
     image: "/assets/achievements/anime/franchise/votoms_finder.jpg"
@@ -5358,16 +5364,16 @@
 - neko_id: votoms_finder
   level: 0
   algo: duration
-  filters: *552
+  filters: *553
   threshold: 0.01
-  metadata: *553
+  metadata: *554
 - neko_id: futari_wa_milky_holmes
   level: 1
   algo: duration
-  filters: &554
+  filters: &555
     franchise: futari_wa_milky_holmes
   threshold: 95%
-  metadata: &555
+  metadata: &556
     title_ru: Детективное агентство Милки Холмс
     title_en: Tantei Opera Milky Holmes
     image: "/assets/achievements/anime/franchise/futari_wa_milky_holmes.png"
@@ -5375,23 +5381,23 @@
 - neko_id: futari_wa_milky_holmes
   level: 0
   algo: duration
-  filters: *554
+  filters: *555
   threshold: 0.01
-  metadata: *555
+  metadata: *556
 - neko_id: touch
   level: 1
   algo: duration
-  filters: &556
+  filters: &557
     franchise: touch
     not_anime_ids:
     - 39352
-  generator: &557
+  generator: &558
     not_ignored_ids:
     - 2491
     - 2492
     - 2493
   threshold: 95%
-  metadata: &558
+  metadata: &559
     title_ru: Касание
     title_en: Touch
     image: "/assets/achievements/anime/franchise/touch.jpg"
@@ -5399,20 +5405,20 @@
 - neko_id: touch
   level: 0
   algo: duration
-  filters: *556
-  generator: *557
+  filters: *557
+  generator: *558
   threshold: 0.01
-  metadata: *558
+  metadata: *559
 - neko_id: captain_tsubasa
   level: 1
   algo: duration
-  filters: &559
+  filters: &560
     franchise: captain_tsubasa
     not_anime_ids:
     - 39226
     - 39227
   threshold: 96.6%
-  metadata: &560
+  metadata: &561
     title_ru: Капитан Цубаса
     title_en: Captain Tsubasa
     image: "/assets/achievements/anime/franchise/captain_tsubasa.jpg"
@@ -5420,16 +5426,16 @@
 - neko_id: captain_tsubasa
   level: 0
   algo: duration
-  filters: *559
+  filters: *560
   threshold: 0.01
-  metadata: *560
+  metadata: *561
 - neko_id: space_cobra
   level: 1
   algo: duration
-  filters: &561
+  filters: &562
     franchise: space_cobra
   threshold: 98.3%
-  metadata: &562
+  metadata: &563
     title_ru: Космические приключения Кобры
     title_en: Cobra
     image: "/assets/achievements/anime/franchise/space_cobra.jpg"
@@ -5437,13 +5443,13 @@
 - neko_id: space_cobra
   level: 0
   algo: duration
-  filters: *561
+  filters: *562
   threshold: 0.01
-  metadata: *562
+  metadata: *563
 - neko_id: transformers
   level: 1
   algo: duration
-  filters: &563
+  filters: &564
     franchise: transformers
     not_anime_ids:
     - 6511
@@ -5455,7 +5461,7 @@
     - 39102
     - 39162
   threshold: 99.3%
-  metadata: &564
+  metadata: &565
     title_ru: Трансформеры
     title_en: Transformers
     image: "/assets/achievements/anime/franchise/transformers.jpg"
@@ -5463,13 +5469,13 @@
 - neko_id: transformers
   level: 0
   algo: duration
-  filters: *563
+  filters: *564
   threshold: 0.01
-  metadata: *564
+  metadata: *565
 - neko_id: cyborg
   level: 1
   algo: duration
-  filters: &565
+  filters: &566
     franchise: cyborg
     not_anime_ids:
     - 8394
@@ -5479,7 +5485,7 @@
     - 33163
     - 40250
   threshold: 95%
-  metadata: &566
+  metadata: &567
     title_ru: Киборг 009
     title_en: Cyborg 009
     image: "/assets/achievements/anime/franchise/cyborg.jpg"
@@ -5487,16 +5493,16 @@
 - neko_id: cyborg
   level: 0
   algo: duration
-  filters: *565
+  filters: *566
   threshold: 0.01
-  metadata: *566
+  metadata: *567
 - neko_id: ling_yu
   level: 1
   algo: duration
-  filters: &567
+  filters: &568
     franchise: ling_yu
   threshold: 100%
-  metadata: &568
+  metadata: &569
     title_ru: Край основателей
     title_en: Ling Yu
     image: "/assets/achievements/anime/franchise/ling_yu.jpg"
@@ -5504,16 +5510,16 @@
 - neko_id: ling_yu
   level: 0
   algo: duration
-  filters: *567
+  filters: *568
   threshold: 0.01
-  metadata: *568
+  metadata: *569
 - neko_id: dirty_pair
   level: 1
   algo: duration
-  filters: &569
+  filters: &570
     franchise: dirty_pair
   threshold: 95%
-  metadata: &570
+  metadata: &571
     title_ru: Грязная парочка
     title_en: Dirty Pair
     image: "/assets/achievements/anime/franchise/dirty_pair.jpg"
@@ -5521,19 +5527,19 @@
 - neko_id: dirty_pair
   level: 0
   algo: duration
-  filters: *569
+  filters: *570
   threshold: 0.01
-  metadata: *570
+  metadata: *571
 - neko_id: to_heart
   level: 1
   algo: duration
-  filters: &571
+  filters: &572
     franchise: to_heart
     not_anime_ids:
     - 1624
     - 3977
   threshold: 95%
-  metadata: &572
+  metadata: &573
     title_ru: Для сердца
     title_en: To Heart
     image: "/assets/achievements/anime/franchise/to_heart.jpg"
@@ -5541,16 +5547,16 @@
 - neko_id: to_heart
   level: 0
   algo: duration
-  filters: *571
+  filters: *572
   threshold: 0.01
-  metadata: *572
+  metadata: *573
 - neko_id: el_hazard
   level: 1
   algo: duration
-  filters: &573
+  filters: &574
     franchise: el_hazard
   threshold: 100%
-  metadata: &574
+  metadata: &575
     title_ru: Эль-Хазард
     title_en: El Hazard
     image: "/assets/achievements/anime/franchise/el_hazard.jpg"
@@ -5558,13 +5564,13 @@
 - neko_id: el_hazard
   level: 0
   algo: duration
-  filters: *573
+  filters: *574
   threshold: 0.01
-  metadata: *574
+  metadata: *575
 - neko_id: time_bokan
   level: 1
   algo: duration
-  filters: &575
+  filters: &576
     franchise: time_bokan
     not_anime_ids:
     - 3008
@@ -5580,7 +5586,7 @@
     - 29739
     - 39707
   threshold: 95%
-  metadata: &576
+  metadata: &577
     title_ru: Приключения во времени
     title_en: Time Bokan
     image: "/assets/achievements/anime/franchise/time_bokan.jpg"
@@ -5588,18 +5594,18 @@
 - neko_id: time_bokan
   level: 0
   algo: duration
-  filters: *575
+  filters: *576
   threshold: 0.01
-  metadata: *576
+  metadata: *577
 - neko_id: konjiki_no_gash_bell
   level: 1
   algo: duration
-  filters: &577
+  filters: &578
     franchise: konjiki_no_gash_bell
     not_anime_ids:
     - 52605
   threshold: 99.5%
-  metadata: &578
+  metadata: &579
     title_ru: Златовласый Гаш Белл
     title_en: Konjiki no Gash Bell
     image: "/assets/achievements/anime/franchise/konjiki_no_gash_bell.jpg"
@@ -5607,16 +5613,16 @@
 - neko_id: konjiki_no_gash_bell
   level: 0
   algo: duration
-  filters: *577
+  filters: *578
   threshold: 0.01
-  metadata: *578
+  metadata: *579
 - neko_id: di_gi_charat
   level: 1
   algo: duration
-  filters: &579
+  filters: &580
     franchise: di_gi_charat
   threshold: 92.9%
-  metadata: &580
+  metadata: &581
     title_ru: Ди-Ги Карат
     title_en: Di Gi Charat
     image: "/assets/achievements/anime/franchise/di_gi_charat.jpg"
@@ -5624,13 +5630,13 @@
 - neko_id: di_gi_charat
   level: 0
   algo: duration
-  filters: *579
+  filters: *580
   threshold: 0.01
-  metadata: *580
+  metadata: *581
 - neko_id: mazinkaiser
   level: 1
   algo: duration
-  filters: &581
+  filters: &582
     franchise: mazinkaiser
     not_anime_ids:
     - 3898
@@ -5640,7 +5646,7 @@
     - 51431
     - 51432
   threshold: 92.4%
-  metadata: &582
+  metadata: &583
     title_ru: Мазинкайзер
     title_en: Mazinkaiser
     image: "/assets/achievements/anime/franchise/mazinkaiser.jpg"
@@ -5648,16 +5654,16 @@
 - neko_id: mazinkaiser
   level: 0
   algo: duration
-  filters: *581
+  filters: *582
   threshold: 0.01
-  metadata: *582
+  metadata: *583
 - neko_id: jigoku_sensei_nube
   level: 1
   algo: duration
-  filters: &583
+  filters: &584
     franchise: jigoku_sensei_nube
   threshold: 100%
-  metadata: &584
+  metadata: &585
     title_ru: Адский учитель Нубэ
     title_en: Jigoku Sensei Nube
     image: "/assets/achievements/anime/franchise/jigoku_sensei_nube.jpg"
@@ -5665,16 +5671,16 @@
 - neko_id: jigoku_sensei_nube
   level: 0
   algo: duration
-  filters: *583
+  filters: *584
   threshold: 0.01
-  metadata: *584
+  metadata: *585
 - neko_id: saber_marionette_j
   level: 1
   algo: duration
-  filters: &585
+  filters: &586
     franchise: saber_marionette_j
   threshold: 100%
-  metadata: &586
+  metadata: &587
     title_ru: Воины-марионетки Джей
     title_en: Saber Marionette J
     image: "/assets/achievements/anime/franchise/saber_marionette_j.jpg"
@@ -5682,16 +5688,16 @@
 - neko_id: saber_marionette_j
   level: 0
   algo: duration
-  filters: *585
+  filters: *586
   threshold: 0.01
-  metadata: *586
+  metadata: *587
 - neko_id: galaxy_angel
   level: 1
   algo: duration
-  filters: &587
+  filters: &588
     franchise: galaxy_angel
   threshold: 95%
-  metadata: &588
+  metadata: &589
     title_ru: Галактический ангел
     title_en: Galaxy Angel
     image: "/assets/achievements/anime/franchise/galaxy_angel.jpg"
@@ -5699,16 +5705,16 @@
 - neko_id: galaxy_angel
   level: 0
   algo: duration
-  filters: *587
+  filters: *588
   threshold: 0.01
-  metadata: *588
+  metadata: *589
 - neko_id: haou_daikei_ryuu_knight
   level: 1
   algo: duration
-  filters: &589
+  filters: &590
     franchise: haou_daikei_ryuu_knight
   threshold: 100%
-  metadata: &590
+  metadata: &591
     title_ru: Властелин властелинов Рыцарь Рю
     title_en: Haou Daikei Ryuu Knight
     image: "/assets/achievements/anime/franchise/haou_daikei_ryuu_knight.jpg"
@@ -5716,6 +5722,6 @@
 - neko_id: haou_daikei_ryuu_knight
   level: 0
   algo: duration
-  filters: *589
+  filters: *590
   threshold: 0.01
-  metadata: *590
+  metadata: *591
