--- a/priv/rules/genki.yml
+++ b/priv/rules/genki.yml
@@ -2,7 +2,7 @@
   neko_id: genki
   level: 1
   algo: count
-  threshold: 10%
+  threshold: 85
   filters:
     anime_ids:
     - 2928
@@ -1316,7 +1316,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 15%
+  threshold: 140
   metadata:
     title_ru: Заводила
     text_ru: Втянет в самые захватывающие приключения!
@@ -1327,7 +1327,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 25%
+  threshold: 250
   metadata:
     title_ru: Человек-праздник
     text_ru: Способен растормошить весь этот скучный мир и взорвать фейерверком!
