--- a/priv/rules/yandere.yml
+++ b/priv/rules/yandere.yml
@@ -2,7 +2,7 @@
   neko_id: yandere
   level: 1
   algo: count
-  threshold: 20%
+  threshold: 60
   filters:
     anime_ids:
       - 35849
@@ -303,7 +303,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 30%
+  threshold: 85
   metadata:
     title_ru: Ураган
     text_ru: Ураганы имеют одну интересную особенность — в их центре всегда спокойно.
@@ -314,7 +314,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 40%
+  threshold: 115
   metadata:
     title_ru: Безумие
     text_ru: Умри, пожалуйста!
