--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -2,7 +2,7 @@
   neko_id: fujoshi
   level: 1
   algo: count
-  threshold: 20%
+  threshold: 30
   filters:
     genre_ids:
       - 28
@@ -18,7 +18,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 30%
+  threshold: 45
   metadata:
     title_ru: Голубок
     text_ru: Поворачивать назад уже слишком поздно. Пора совершить каминг-аут и наконец-то признать свою любовь к "не очень традиционным" историям.
@@ -30,7 +30,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 45%
+  threshold: 70
   metadata:
     title_ru: Шиппер
     text_ru: Мужская дружба? Не, не слышали.
@@ -41,7 +41,7 @@
 
 - <<: *defaults
   level: 4
-  threshold: 60%
+  threshold: 95
   metadata:
     title_ru: Яойный бог
     text_ru: Яой — не жанр. Яой — это стиль жизни.
