--- a/priv/rules/yuuri.yml
+++ b/priv/rules/yuuri.yml
@@ -2,7 +2,7 @@
   neko_id: yuuri
   level: 1
   algo: count
-  threshold: 20%
+  threshold: 15
   filters:
     genre_ids:
       - 26
@@ -30,7 +30,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 35%
+  threshold: 30
   metadata:
     title_ru: Первые чувства
     text_ru: Быть может, это неправильно. Но кого это волнует?
@@ -41,7 +41,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 50%
+  threshold: 45
   metadata:
     title_ru: Я поцеловала девушку...
     text_ru: ... и мне понравилось!
@@ -52,7 +52,7 @@
 
 - <<: *defaults
   level: 4
-  threshold: 70%
+  threshold: 60
   metadata:
     title_ru: Счастливая семейная жизнь
     text_ru: Лилии цветут в вашем доме.
